# ntb-marimo-console

./: .gitignore  README.workspace.md  ntb_marimo_console_orchestration_instructions.md
source/ntb_engine/: .gitignore  README.md  SECURITY.md  STAGE_0_FINAL_OPERATOR_DECISIONS.md  STAGE_1_DATA_SUFFICIENCY_SPEC.md  STAGE_2A_APPROVED_WORKFLOW_ARCHITECTURE.md  STAGE_2_WORKFLOW_ARCHITECTURE.md  STAGE_3A_APPROVED_SCHEMA_SET.md  STAGE_3_SCHEMA_SET.md  STAGE_4A_APPROVED_PROMPT_SET.md  STAGE_4_PROMPT_SET.md  STAGE_5_VALIDATION_FRAMEWORK.md  STAGE_6_FINAL_SYSTEM_SPEC.md  pyproject.toml
source/ntb_engine/.github/: CODEOWNERS
source/ntb_engine/docs/: deployment-integration-readiness.md  edge-case-validation-matrix.md  operator-quickstart.md  priority-1-conformance-baseline.md  readiness-engine-v1.md  user-workflow-narrative.md
source/ntb_engine/notebooks/: readiness_matrix.py
source/ntb_engine/tests/: cli_smoke_runner.py  compiler_runtime_smoke_runner.py  test_adapter_integration.py  test_audit_report.py  test_cl_input_validation.py  test_cli.py  test_execution_facade.py  test_gemini_adapter.py  test_integration_full_loop.py  test_log_history_view.py  test_logging_record.py  test_logging_wrappers.py  test_openai_adapter.py  test_output_schema_validation.py  test_packet_compiler.py  test_packet_compiler_6e.py  test_packet_compiler_6e_databento_source.py  test_packet_compiler_cl.py  test_packet_compiler_cl_databento_source.py  test_packet_compiler_cl_eia_source.py  test_packet_compiler_databento_cumulative_delta_source.py  test_packet_compiler_databento_source.py  (+16 more)
(+112 files in other folders)
