[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ninjatradebuilder"
version = "0.1.0"
description = "Strict staged futures-evaluation runtime and validation package for NinjaTradeBuilder."
requires-python = ">=3.11"
dependencies = [
  "google-genai>=1.0,<2",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
databento = [
  "databento>=0.57,<1",
]
notebook = [
  "marimo>=0.8,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
